src/test/deca/context/invalid/created/rule3.71/noclasstype.deca
// Résultat erreur:
//    Appel de méthode sur un type non-classe (règle 3.71)
//
// Description:
//    Tests de programme incorrect contextuellement (appel de méthode sur un type non-classe)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    int maMethode(int param) {
        return param * 2;
    }
}

class Test {
    int testMethod() {
        int x = 5;
        return x.maMethode(10);
    }
}
